Added style for "Please wait..." orverlay on tablesorter plugin.

--- a/otr/otr.css
+++ b/otr/otr.css
@@ -64,3 +64,15 @@ tr.alternate {
 .hideMe {
   display:none;
 }
+#sort_overlay {
+	top: 100px;
+	left: 50%;
+	position: absolute;
+	margin-left: -100px;
+	width: 200px;
+	text-align: center;
+	display: none;
+	margin-top: -10px;
+	background: #000;
+	color: #fff;
+}
